Added some fuzziness into queries

--- a/docker/frontend-reverse-proxy/www/data/index.html
+++ b/docker/frontend-reverse-proxy/www/data/index.html
@@ -99,6 +99,7 @@
                   <tr>
                     <th scope="col">#</th>
                     <th scope="col">Name</th>
+                    <th scope="col">Description</th>
                     <th scope="col">Score</th>
                   </tr>
                 </thead>
@@ -106,6 +107,7 @@
                   <tr ng-repeat="item in items">
                     <th scope="row">{{item.id}}</th>
                     <td>{{item.name}}</td>
+                    <td>{{item.description}}</td>
                     <td>{{item.score}}</td>
                   </tr>
                 </tbody>
